Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5ca137ff74dce32ee35bf02e-379.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1Y2ExMzdmZjc0ZGNlMzJlZTM1YmYwMmUiLCJub21icmUiOiJUZXN0IDEiLCJlbWFpbCI6InRlc3QxQGVtYWlsLmNvbSIsIl9fdiI6MH0sImlhdCI6MTU1NTQyMzQ0NSwiZXhwIjoxNTU1NTk2MjQ1fQ.4ifl5u8Y2Q_sLi_acyAEAIOzGjBLNFQfEgy_tZV1Fgk" alt=""> -->
+
 	<div class="g-signin2" data-onsuccess="onSignIn"></div>
 
 
